--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
         <div style="max-width: fit-content;"> 
-            <h1>Trio-O, a Digital Take on "Otrio"</h1>
+            <h1>A Digital Take on "Otrio"</h1>
         </div>
         <div style="max-width: fit-content; margin-top: 20px;">
           <a href="#instructions" class="btn btn-primary">How to Play</a>
@@ -79,7 +79,4 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
         </script>
     </body>
-    <footer style="margin: 20px">
-    <p>Copyright 2021 Gregory Josephs - <a href="mailto:greg.josephs@gmail.com">greg.josephs@gmail.com</a></p>
-    </footer>
 </html>
